| 3.0.0 - 3.0.7 (these versions are discouraged)   | 3.6 or later      |
| 2.4.7                                            | 2.7 or later      |
| 1.5.7                                            | 2.6 - 2.7         |
+--------------------------------------------------+-------------------+


Version 3.3.2 - in development
------------------------------



Version 3.3.1 - December, 2025
------------------------------
- Added license info to metadata, following PEP-639. Thanks to Gedalia Pasternak and
  Marc Mueller for submitted issue and PR. Fixes #626.


Version 3.3.0 - December, 2025
------------------------------
===========================================================================================
 The version 3.3.0 release will begin emitting `DeprecationWarnings` for pyparsing methods
 that have been renamed to PEP8-compliant names (introduced in pyparsing 3.0.0, in August,
 2021, with legacy names retained as aliases). In preparation, I added in pyparsing
 3.2.2 a utility for finding and replacing the legacy method names with the new names.
 This utility is located at `pyparsing/tools/cvt_pep8_names.py`. This script will scan all
 Python files specified on the command line, and if the `-u` option is selected, will
 replace all occurrences of the old method names with the new PEP8-compliant names,
 updating the files in place.

 Here is an example that converts all the files in the pyparsing `/examples` directory:

      python -m pyparsing.tools.cvt_pyparsing_pep8_names -u examples/*.py

 The new names are compatible with pyparsing versions 3.0.0 and later.
===========================================================================================

- Deprecated `indentedBlock`, when converted using the `cvt_pyparsing_pep8_names`
  utility, will emit `UserWarnings` that additional code changes will be required.
  This is because the new `IndentedBlock` class no longer requires the calling code