@@ -136,11 +136,12 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 3, 2, "final", 1)
-__version_time__ = "23 Dec 2025 16:08 UTC"
+__version_time__ = "23 Dec 2025 20:25 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
 
+from .warnings import *
 from .util import *
 from .exceptions import *
 from .actions import *
@@ -283,6 +284,9 @@ __all__ = [
     "ParseSyntaxException",
     "ParserElement",
     "PositionToken",
+    "PyparsingDeprecationWarning",
+    "PyparsingDiagnosticWarning",
+    "PyparsingWarning",
     "QuotedString",
     "RecursiveGrammarException",
     "Regex",
